--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
-  "main": "./public/electron.js",
+  "main": "./public/electron.tsx",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
